rspec-tools/tests/resources/invalid-asciidoc/unprotected_formatting_with_plusses.adoc
Some content and `This is not + ##protected## +`